--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
