--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,7 @@
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
   <link rel="icon" type="image/png" href="favicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
 
   <!-- Sapper generates a <style> tag containing critical CSS
