--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta name="theme-color" content="#333333" />
+  <meta name="theme-color" content="#b37de8" />
   <title>VPN Facil</title>
 
   %sapper.base%
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="global.css" />
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
   <link rel="icon" type="image/png" href="favicon.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
 
   <!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
