--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta name="theme-color" content="#b37de8" />
-  <title>VPN Facil</title>
+  <title>VPN Fácil</title>
 
   %sapper.base%
 
@@ -16,24 +16,14 @@
     href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap"
     rel="stylesheet">
 
-  <!-- Sapper generates a <style> tag containing critical CSS
-	     for the current page. CSS for the rest of the app is
-	     lazily loaded when it precaches secondary pages -->
   %sapper.styles%
 
-  <!-- This contains the contents of the <svelte:head> component, if
-	     the current page has one -->
   %sapper.head%
 </head>
 
 <body>
-  <!-- The application will be rendered inside this element,
-	     because `src/client.js` references it -->
   <div id="sapper">%sapper.html%</div>
 
-  <!-- Sapper creates a <script> tag containing `src/client.js`
-	     and anything else it needs to hydrate the app and
-	     initialise the router -->
   %sapper.scripts%
 </body>
 
