--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,19 @@
 
   %sapper.base%
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54909104-11"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-54909104-11');
+  </script>
+
+
   <link rel="stylesheet" href="global.css" />
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
   <link rel="icon" type="image/png" href="favicon.png" />
