add opengraph and twitter card meta tags

--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta name="theme-color" content="#b37de8" />
+
   <title>VPN Fácil</title>
+  <meta name="description"
+    content="Necesitas un VPN para ser líbre y anónimo en Internet: tienes decenas para elegir, pero aquí te lo ponemos fácil">
+  <link rel="canonical" href="https://vpnfacil.com" />
+
+  <meta property="og:title" content="Elige tu VPN y Navega con Seguridad – VPN Fácil" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://vpnfacil.com/vpn-facil.png">
+  <meta property="og:url" content="https://vpnfacil.com" />
+  <meta property="og:locale" content="es_ES" />
+  <meta property="og:description"
+    content="Necesitas un VPN para ser líbre y anónimo en Internet: tienes decenas para elegir, pero aquí te lo ponemos fácil" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@rubenvara01">
+  <meta name="twitter:description"
+    content="Necesitas un VPN para ser líbre y anónimo en Internet: tienes decenas para elegir, pero aquí te lo ponemos fácil" />
+  <meta name="twitter:title" content="Elige tu VPN y Navega con Seguridad – VPN Fácil" />
+  <meta name="twitter:image" content="https://vpnfacil.com/vpn-facil.png">
+  <meta name="twitter:image:alt" content="VPN Fácil">
 
   %sapper.base%
 
