--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta name="theme-color" content="#b37de8" />
+  <meta name="theme-color" content="#b379ec" />
 
   <title>VPN Fácil</title>
   <meta name="description"
@@ -46,7 +46,7 @@
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
   <link rel="icon" type="image/png" href="favicon.png" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;700&family=Ubuntu:wght@400;700&display=swap"
     rel="stylesheet">
 
   %sapper.styles%
