--- a/src/template.html
+++ b/src/template.html
@@ -42,6 +42,7 @@
   </script>
 
 
+  <link rel="stylesheet" href="normalize.css" />
   <link rel="stylesheet" href="global.css" />
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
   <link rel="icon" type="image/png" href="favicon.png" />
