improve head content, front-matter info

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
   <title>VPN Fácil</title>
   <meta name="description"
     content="Necesitas un VPN para ser líbre y anónimo en Internet: tienes decenas para elegir, pero aquí te lo ponemos fácil">
-  <link rel="canonical" href="https://vpnfacil.com" />
+  <!-- <link rel="canonical" href="https://vpnfacil.com" /> -->
 
   <meta property="og:title" content="Elige tu VPN y Navega con Seguridad – VPN Fácil" />
   <meta property="og:type" content="website" />
