--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Elige tu VPN y Navega con Seguridad – VPN Fácil" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://vpnfacil.com/vpn-facil.png">
-  <meta property="og:url" content="https://vpnfacil.com" />
+  <meta property="og:url" content="https://vpnfacil.com/" />
   <meta property="og:locale" content="es_ES" />
   <meta property="og:description"
     content="Necesitas un VPN para ser líbre y anónimo en Internet: tienes decenas para elegir, pero aquí te lo ponemos fácil" />
@@ -40,7 +40,6 @@
 
     gtag('config', 'UA-54909104-11');
   </script>
-
 
   <link rel="stylesheet" href="normalize.css" />
   <link rel="stylesheet" href="global.css" />
