site to sapper subdomain

--- a/src/template.html
+++ b/src/template.html
@@ -9,12 +9,12 @@
   <title>VPN Fácil</title>
   <meta name="description"
     content="Necesitas un VPN para ser líbre y anónimo en Internet: tienes decenas para elegir, pero aquí te lo ponemos fácil">
-  <!-- <link rel="canonical" href="https://vpnfacil.com" /> -->
+  <!-- <link rel="canonical" href="https://sapper.vpnfacil.com" /> -->
 
   <meta property="og:title" content="Elige tu VPN y Navega con Seguridad – VPN Fácil" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://vpnfacil.com/vpn-facil.png">
-  <meta property="og:url" content="https://vpnfacil.com/" />
+  <meta property="og:image" content="https://sapper.vpnfacil.com/vpn-facil.png">
+  <meta property="og:url" content="https://sapper.vpnfacil.com/" />
   <meta property="og:locale" content="es_ES" />
   <meta property="og:description"
     content="Necesitas un VPN para ser líbre y anónimo en Internet: tienes decenas para elegir, pero aquí te lo ponemos fácil" />
@@ -24,22 +24,10 @@
   <meta name="twitter:description"
     content="Necesitas un VPN para ser líbre y anónimo en Internet: tienes decenas para elegir, pero aquí te lo ponemos fácil" />
   <meta name="twitter:title" content="Elige tu VPN y Navega con Seguridad – VPN Fácil" />
-  <meta name="twitter:image" content="https://vpnfacil.com/vpn-facil.png">
+  <meta name="twitter:image" content="https://sapper.vpnfacil.com/vpn-facil.png">
   <meta name="twitter:image:alt" content="VPN Fácil">
 
   %sapper.base%
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54909104-11"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-54909104-11');
-  </script>
 
   <link rel="stylesheet" href="normalize.css" />
   <link rel="stylesheet" href="global.css" />
